Fix code-rabit , messages